Added metadata to site

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Policy - an incremental world domination game</title>
+        <meta name="description" content="A game where you manage your income, do well in your job, and all thet taking over the world stuff">
+        <meta name="keywords" content="policy, game, incremental, job, theonlymrcat">
+        <meta name="author" content="TheOnlyMrCat">
         <script src='policy.js'></script>
         <script src='cookies.js'></script>
         <link id=classic type='text/css' rel='stylesheet' href="classic.css">
