Implemented the GameJolt API

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src='policy.js'></script>
         <script src='cookies.js'></script>
         <script src='tabs.js'></script>
+        <script src="gj-js-api.js"></script>
         <link id=classic type='text/css' rel='stylesheet' href="classic.css">
         <link type='text/css' rel='stylesheet' href="allthemes.css">
     </head>
